--- a/index.html
+++ b/index.html
@@ -1,3 +1,13 @@
+<!--
+@Author: BreezeDust
+@Date:   2016-03-13
+@Email:  breezedust.com@gmail.com
+@Last modified by:   BreezeDust
+@Last modified time: 2016-04-10
+-->
+
+
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -6,11 +16,6 @@
 </head>
 <body>
 <div id="app">
-    <div class="nav">
-        <a href="#page-a">page A</a>
-        <a href="#page-b">page B</a>
-    </div>
-    <component :is="view"></component>
 </div>
 </body>
 </html>
